[package]
name    = "pris"
version = "0.0.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
build   = "build.rs"

[dependencies]
freetype-rs = "0.11"
libc        = "0.2"

# For the parser.
lalrpop-util = "0.13"
regex        = "0.2"

# For command-line parsing.
docopt          = "0.7"
rustc-serialize = "0.3"

[build-dependencies]
lalrpop = "0.13"

[replace]
# Lalrpop 0.13 broke Rust 1.13 compatibility; use my own fork for now.
"lalrpop:0.13.0" = { git = "https://github.com/ruuda/lalrpop", branch = "rust113" }
